--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "axios": "^1.2.6",
     "fslightbox-vue": "^2.0.2",
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
