--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "fslightbox-vue": "^2.0.2",
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-carousel": "^0.2.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
